# PUJ_CGraf

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/SimpleOBJViewer/: Application.h  CMakeLists.txt  Scene.cxx  Scene.h
lib/: CMakeLists.txt
lib/PUJ/CGraf/: Camera.h  Mesh.cxx  Mesh.h  Mesh_load_from_OBJ.cxx  Object.cxx  Object.h  Texture.cxx  Texture.h  TrackballCamera.h  Traits.h
models/: sphere.mtl  sphere.ppm
prototypes/OpenGL/: simple_2D_OpenGL.cxx  simple_2D_OpenGL.py
prototypes/OpenGL/house_and_car_2D/: .gitignore  Application.h  Makefile  Object.cxx  house_and_car_2D.cxx
prototypes/OpenGL/projectile_motion/: .gitignore  Application.cxx  Application.h  Helpers.h  Makefile  Object.cxx  Object.h  Scene.cxx  Scene.h  Traits.h  projectile_motion.cxx
prototypes/OpenGL/simple_2D_OpenGL/: simple_2D_OpenGL.cxx  simple_2D_OpenGL.py
prototypes/OpenGL/simple_3D_objects/: .gitignore  CMakeLists.txt
prototypes/OpenGL/simple_3D_objects/src/: Application.cxx  Scene.cxx  Scene.h  simple_3D_objects.cxx
prototypes/OpenGL/simple_3D_objects/src/PUJ/CGraf/: Camera.cxx  Mesh.cxx  Mesh.h  Object.cxx  Object.h  Scene.cxx  Scene.h  TrackballCamera.cxx  Traits.h
prototypes/OpenGL/simple_3D_objects_with_lights/: CMakeLists.txt
prototypes/OpenGL/simple_3D_objects_with_lights/src/: Application.h  Scene.cxx
prototypes/OpenGL/simple_3D_objects_with_lights/src/PUJ/CGraf/: Mesh.cxx  Mesh.h  Scene.cxx  Scene.h  Traits.h
prototypes/OpenGL/simple_with_aspect_ratio_2D_OpenGL/: simple_with_aspect_ratio_2D_OpenGL.cxx  simple_with_aspect_ratio_2D_OpenGL.py
prototypes/cxx/: CMakeLists.txt
prototypes/cxx/PUJ/CGraf/: FrameBuffer.cxx  FrameBuffer.h  Viewport.cxx  Viewport.h
prototypes/cxx/executables/: 01_random_frame.cxx  02_morphing_frames.cxx  03_game_of_life.cxx
prototypes/python3/PUJ/CGraf/: FrameBuffer.py  Viewport.py  __init__.py
prototypes/python3/scripts/: 01_random_frame.py  01_random_frames.py  02_morphing.py  03_game_of_life.py  04_draw_line.py  05_draw_circle.py
